--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,10 @@
     "nuxt-gtag": "^3.0.2",
     "nuxt-openapi-docs-module": "^5.3.1",
     "pinia": "^2.3.1",
+    "primevue": "^4.3.3",
     "prom-client": "^15.1.3",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-primeui": "^0.6.1",
     "universal-cookie": "^8.0.1",
     "vue": "latest",
     "vue-router": "latest",
@@ -50,7 +53,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@nuxt/icon": "^1.11.0",
     "@nuxt/test-utils": "^3.17.2",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@stripe/stripe-js": "^4.10.0",
     "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
