--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/robots": "^4.1.11",
     "@nuxtjs/sitemap": "^6.1.5",
     "@pinia/nuxt": "^0.7.0",
+    "@tailwindcss/vite": "^4.1.8",
     "@unlok-co/nuxt-stripe": "^4.0.2",
     "@vesp/nuxt-fontawesome": "^1.2.1",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -39,6 +40,7 @@
     "primevue": "^4.3.3",
     "prom-client": "^15.1.3",
     "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.8",
     "tailwindcss-primeui": "^0.6.1",
     "universal-cookie": "^8.0.1",
     "vue": "latest",
