--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@iconify-json/fa-solid": "^1.2.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.11.0",
     "@nuxt/test-utils": "^3.17.2",
@@ -65,6 +66,7 @@
     "axios-mock-adapter": "^2.1.0",
     "fake-indexeddb": "^6.0.0",
     "happy-dom": "^15.11.7",
+    "nuxt-schema-org": "^5.0.5",
     "pinia-plugin-persistedstate": "^4.3.0",
     "playwright-core": "^1.51.1",
     "sass-embedded": "^1.86.0",
