--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
-    "vue.server.maxOldSpaceSize": 4096,
-    "vue3snippets.enable-compile-vue-file-on-did-save-code": false
+    // Required in vscode-eslint < v3.0.10 only
+    "eslint.useFlatConfig": true,
+    "tailwindCSS.experimental.classRegex": [
+        [
+            "cva\\(((?:[^()]|\\([^()]*\\))*)\\)",
+            "[\"'`]([^\"'`]*).*?[\"'`]"
+        ],
+        [
+            "cx\\(((?:[^()]|\\([^()]*\\))*)\\)",
+            "(?:'|\"|`)([^']*)(?:'|\"|`)"
+        ]
+    ]
 }
