--- a/forum_backend/Pipfile
+++ b/forum_backend/Pipfile
@@ -4,8 +4,47 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+pandas = "*"
+django = "*"
+gunicorn = "*"
+stripe = "*"
+matplotlib = "*"
+pyotp = "*"
+unidecode = "*"
+psycopg = {extras = ["pool", "binary"], version = "*"}
+tablib = "*"
+pillow = "*"
+drf-spectacular = "*"
+django-ckeditor-5 = "*"
+python-dotenv = "*"
+djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
+django-cors-headers = "*"
+django-extensions = "*"
+django-imagekit = "*"
+django-axes = "*"
+boto3 = "*"
+django-storages = "*"
+django-debug-toolbar = "*"
+django-redis = "*"
+django-import-export = "*"
+numpy = "*"
+celery = "*"
+firebase-admin = "*"
+rapidfuzz = "*"
+python-levenshtein = "*"
+requests = "*"
+djangorestframework-simplejwt = "*"
+thefuzz = "*"
+daphne = "*"
+django-celery-beat = "*"
+flower = "*"
+pyjwt = "*"
+nltk = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.13"
