--- a/forum_backend/Pipfile
+++ b/forum_backend/Pipfile
@@ -43,6 +43,8 @@ flower = "*"
 pyjwt = "*"
 nltk = "*"
 channels = {extras = ["daphne"], version = "*"}
+autobahn = "==22.4.2"
+channels-redis = "*"
 
 [dev-packages]
 autopep8 = "*"
