--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,68 +12,71 @@
   "dependencies": {
     "@artmizu/nuxt-prometheus": "2.7.0",
     "@firebase/app-types": "^0.9.3",
-    "@nuxt/eslint": "1.10.0",
     "@nuxt/fonts": "0.12.1",
-    "@nuxt/icon": "2.1.0",
+    "@nuxt/hints": "1.0.0-alpha.5",
+    "@nuxt/icon": "2.2.0",
     "@nuxt/image": "2.0.0",
-    "@nuxt/scripts": "0.13.0",
-    "@nuxt/test-utils": "3.20.1",
-    "@nuxtjs/i18n": "^10.2.0",
-    "@nuxtjs/robots": "^5.5.6",
-    "@nuxtjs/seo": "^3.2.2",
-    "@nuxtjs/sitemap": "^7.4.7",
+    "@nuxt/scripts": "0.13.2",
+    "@nuxtjs/i18n": "^10.2.1",
+    "@nuxtjs/robots": "^5.6.7",
+    "@nuxtjs/seo": "^3.3.0",
+    "@nuxtjs/sitemap": "^7.5.2",
     "@pinia/nuxt": "^0.11.3",
-    "@primevue/icons": "^4.4.1",
-    "@tailwindcss/vite": "^4.1.17",
-    "@unhead/addons": "^2.0.19",
-    "@unhead/vue": "^2.0.19",
-    "@unlok-co/nuxt-stripe": "^5.0.0",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "@unhead/addons": "^2.1.2",
+    "@unhead/vue": "^2.1.2",
+    "@unlok-co/nuxt-stripe": "^6.0.2",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vueup/vue-quill": "^1.2.0",
-    "@vueuse/core": "^14.0.0",
-    "@vueuse/integrations": "^14.0.0",
-    "@vueuse/math": "^14.0.0",
+    "@vueuse/components": "^14.1.0",
+    "@vueuse/core": "^14.1.0",
+    "@vueuse/integrations": "^14.1.0",
+    "@vueuse/math": "^14.1.0",
+    "@vueuse/motion": "3.0.3",
     "@vueuse/sound": "^2.1.3",
     "animate.css": "^4.1.1",
     "dayjs": "^1.11.19",
-    "eslint": "^9.39.1",
-    "firebase": "^12.6.0",
-    "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.0",
+    "firebase": "^12.7.0",
     "jwt-decode": "^4.0.0",
-    "nuxt": "^4.2.1",
+    "nuxt": "^4.2.2",
     "nuxt-authentication": "^1.0.8",
     "nuxt-gtag": "^4.1.0",
     "nuxt-openapi-docs-module": "^5.3.2",
     "nuxt-vuefire": "^1.1.0",
     "pinia": "^3.0.4",
-    "primevue": "^4.4.1",
+    "primevue": "^4.5.4",
     "prom-client": "^15.1.3",
     "qrcode": "^1.5.4",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-primeui": "^0.6.1",
+    "tw-animate-css": "^1.4.0",
     "universal-cookie": "^8.0.1",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.3",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4",
     "vue-stripe-js": "^2.0.2",
-    "zod": "^4.1.12"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@iconify-json/fa-solid": "^1.2.2",
-    "@nuxt/test-utils": "^3.20.1",
-    "@stripe/stripe-js": "^8.4.0",
+    "@nuxt/eslint": "1.12.1",
+    "@nuxt/test-utils": "3.23.0",
+    "@primevue/icons": "^4.5.4",
+    "@stripe/stripe-js": "^8.6.1",
     "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
-    "@vueuse/nuxt": "^14.0.0",
-    "happy-dom": "^20.0.10",
-    "nuxt-schema-org": "^5.0.9",
+    "@vueuse/nuxt": "^14.1.0",
+    "eslint": "^9.39.2",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.3",
+    "happy-dom": "^20.1.0",
+    "nuxt-schema-org": "^5.0.10",
     "pinia-plugin-persistedstate": "^4.7.1",
-    "playwright-core": "^1.56.1",
-    "sass-embedded": "^1.93.3",
+    "playwright-core": "^1.57.0",
+    "sass-embedded": "^1.97.2",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.9",
-    "vue-tsc": "^3.1.4"
+    "vitest": "^4.0.17",
+    "vue-tsc": "^3.2.2"
   },
   "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
 }
