--- a/forum_backend/Pipfile
+++ b/forum_backend/Pipfile
@@ -19,7 +19,6 @@ django-ckeditor-5 = "*"
 python-dotenv = "*"
 djangorestframework = "*"
 markdown = "*"
-django-filter = "*"
 django-cors-headers = "*"
 django-extensions = "*"
 django-imagekit = "*"
@@ -45,6 +44,12 @@ nltk = "*"
 channels = {extras = ["daphne"], version = "*"}
 autobahn = "==22.4.2"
 channels-redis = "*"
+django-environ = "*"
+pydantic = "*"
+factory-boy = "*"
+django-filter = "*"
+graphene-django = "*"
+httpx = "*"
 
 [dev-packages]
 autopep8 = "*"
